...
    var taskToEdit: Task?
    
    private var model: AddEditTaskModel!

    // MARK: - UI Elements
    
    private lazy var titleTextField: UITextField = {
        let textField = UITextField()
        textField.accessibilityIdentifier = "titleTextField"
        textField.font = UIFont.systemFont(ofSize: 34, weight: .bold)
        textField.textAlignment = .left
        textField.placeholder = "Новая задача"
        textField.textColor = .label
...
        label.font = UIFont.preferredFont(forTextStyle: .caption1)
        label.textColor = .secondaryLabel
        label.translatesAutoresizingMaskIntoConstraints = false
        return label
    }()
    
    private lazy var descriptionTextView: UITextView = {
        let textView = UITextView()
        textView.accessibilityIdentifier = "descriptionTextView"
        textView.font = UIFont.preferredFont(forTextStyle: .body)
        textView.layer.cornerRadius = 8.0
        textView.translatesAutoresizingMaskIntoConstraints = false
        return textView
...
